feat: basic vite bootstrap without style9

--- a/apps/ligo-virgo/index.html
+++ b/apps/ligo-virgo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- local dev index.html -->
+        <!-- Vite local dev index.html -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="/favicon.ico" />
@@ -13,4 +13,5 @@
     <body>
         <div id="root"></div>
     </body>
+    <script src="./src/index.tsx" lang="ts" type="module"></script>
 </html>
