feat: PWA support

--- a/apps/ligo-virgo/src/template.html
+++ b/apps/ligo-virgo/src/template.html
@@ -4,6 +4,21 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel="manifest" href="/manifest.json" />
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker
+                        .register('/service-worker.js')
+                        .catch(registrationError => {
+                            console.log(
+                                'SW registration failed: ',
+                                registrationError
+                            );
+                        });
+                });
+            }
+        </script>
         <%= htmlWebpackPlugin.options.embedHeaderScript %>
     </head>
     <body>
