--- a/apps/ligo-virgo/src/index.html
+++ b/apps/ligo-virgo/src/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="/favicon.ico" />
         <title>AFFiNE - All In One Workos</title>
+        <script>
+            window.global = window;
+        </script>
     </head>
     <body>
         <div id="root"></div>
